force-app/main/default/objects/KimbleOne__SupplierRequisitionVersion__c/KimbleOne__SupplierRequisitionVersion__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Requisition Version</label>
    <nameField>
        <label>SupplierRequisitionVersion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Requisition Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>