force-app/main/default/objects/KimbleOne__SupplierRequisitionVersion__c/fields/KimbleOne__SupplierRequisition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierRequisition__c</fullName>
    <label>Supplier Requisition</label>
    <referenceTo>KimbleOne__SupplierRequisition__c</referenceTo>
    <relationshipLabel>Supplier Requisition Versions</relationshipLabel>
    <relationshipName>SupplierRequisitionVersions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>