force-app/main/default/objects/KimbleOne__SupplierRequisitionVersion__c/fields/KimbleOne__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__VersionNumber__c</fullName>
    <label>Version Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>